# topt-proto

./: .gitignore  README.md  demo.ipynb  pyproject.toml
.github/workflows/: python-app.yml
src/topt_proto/: __init__.py  clifford.py  gadgetisation.py  normal_form.py  utils.py
tests/: test_clifford.py  test_gadgetisation.py  test_normal_form.py  test_utils.py
tests/qasm/: cnot_t_1.qasm  cnot_t_3.qasm  cnot_t_4.qasm  cnot_t_5.qasm  cnot_t_6.qasm
theory/: clifford.md
