[tool.poetry]
name = "topt-proto"
version = "0.1.0"
description = ""
authors = ["CalMacCQ <93673602+CalMacCQ@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytket = "^1.30.0"
qiskit = "^1.2.2"
pytket-qiskit = "^0.56.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
black = "^24.8.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
