[project]
name = "topt-proto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytket>=1.37.0",
    "pytket-qiskit>=0.62.0",
    "pytest>=8.3.4",
]

[dependency-groups]
lint = [
    "ruff>=0.8.4",
]
test = [
    "pytest>=8.3.4",
]
